# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: Tests and linter.yml  lint_check.yml
task_manager/: Makefile  mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: base_users.json  test_users.json
task_manager/labels/: views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  models.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  base_form.html  form_login.html  index.html
task_manager/templates/labels/: delete.html  form_create.html  form_update.html  labels.html
task_manager/templates/statuses/: delete.html  form_create.html  form_update.html  statuses.html
task_manager/templates/tasks/: delete.html  form_create.html  form_update.html  task_show.html  tasks.html
task_manager/templates/users/: delete.html  form_create.html  form_update.html  users.html
task_manager/users/: forms.py  tests.py  views.py
task_manager/users/migrations/: 0001_initial.py
