[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager app"
authors = ["SHArtyom <sartiom1@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.3"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
django-bootstrap5 = "^23.3"
whitenoise = "^6.5.0"
django-filter = "^23.2"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
